--- a/test/extrude-hole.html
+++ b/test/extrude-hole.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Simple Extrude Example</title>
+    <title>Extrude with Hole</title>
 </head>
 <body>
     <style>
@@ -23,8 +23,16 @@
             [
                 [
                     [0, 0], [10, 0], [10, 10], [0, 10]
-                ].reverse()
-            ]
+                ].reverse(),
+                // Hole
+                [
+                    [2, 2], [8, 2], [8, 8], [2, 8]
+                ]
+            ],
+
+            // [[
+            //     [20, 20], [30, 20], [30, 30], [20, 30]
+            // ].reverse()]
         ];
 
         clay.application.create('#main', {
@@ -34,8 +42,10 @@
             init(app) {
                 this._camera = app.createCamera([5, 5, 20], [5, 5, 0]);
                 const result = polygonExtrude.extrude(polygons, {
-                    depth: 2
-                    // bevelSize: 0
+                    depth: 2,
+                    // bevelSize: 0,
+                    // bevelSize: 0.5,
+                    // bevelSegments: 2
                 });
 
                 app.createDirectionalLight([-1, -2, -1]);
@@ -46,8 +56,8 @@
                 const geometry = new clay.Geometry();
                 geometry.attributes.position.value = result.position;
                 geometry.indices = result.indices;
-                geometry.generateVertexNormals();
                 geometry.generateBarycentric();
+                geometry.generateFaceNormals();
 
                 const mesh = app.createMesh(geometry, {});
                 mesh.material.set('lineWidth', 1);
