--- a/test/extrude-hole.html
+++ b/test/extrude-hole.html
@@ -48,7 +48,7 @@
                     // bevelSegments: 2
                 });
 
-                app.createDirectionalLight([-1, -2, -1]);
+                app.createDirectionalLight([-1, -2, -1], '#aaa');
                 app.createAmbientLight('#333');
 
                 console.log(result.indices, result.position);
@@ -57,11 +57,10 @@
                 geometry.attributes.position.value = result.position;
                 geometry.indices = result.indices;
                 geometry.generateBarycentric();
-                geometry.generateFaceNormals();
+                geometry.generateVertexNormals();
 
                 const mesh = app.createMesh(geometry, {});
                 mesh.material.set('lineWidth', 1);
-                mesh.culling = false;
 
                 this._control = new clay.plugin.OrbitControl({
                     target: this._camera,
