Fix polygon offset with hole

--- a/test/extrude-hole.html
+++ b/test/extrude-hole.html
@@ -44,8 +44,8 @@
                 const result = polygonExtrude.extrude(polygons, {
                     depth: 2,
                     // bevelSize: 0,
-                    // bevelSize: 0.5,
-                    // bevelSegments: 2
+                    bevelSize: 0.5,
+                    bevelSegments: 2
                 });
 
                 app.createDirectionalLight([-1, -2, -1], '#aaa');
