--- a/test/extrude-simple.html
+++ b/test/extrude-simple.html
@@ -16,7 +16,7 @@
         }
     </style>
     <canvas id="main"></canvas>
-    <script src="../dist/polygon-extrude.js"></script>
+    <script src="../dist/geometry-extrude.js"></script>
     <script src="./lib/claygl.js"></script>
     <script>
         const polygons = [
@@ -33,7 +33,7 @@
 
             init(app) {
                 this._camera = app.createCamera([5, 5, 20], [5, 5, 0]);
-                const result = polygonExtrude.extrude(polygons, {
+                const result = geometryExtrude.extrudePolygon(polygons, {
                     depth: 2
                     // bevelSize: 0
                 });
