--- a/test/extrude-star.html
+++ b/test/extrude-star.html
@@ -16,7 +16,7 @@
         }
     </style>
     <canvas id="main"></canvas>
-    <script src="../dist/polygon-extrude.js"></script>
+    <script src="../dist/geometry-extrude.js"></script>
     <script src="./lib/dat.gui.js"></script>
     <script src="./lib/claygl.js"></script>
     <script>
@@ -84,7 +84,7 @@
                 });
 
                 function updateGeometry() {
-                    const result = polygonExtrude.extrude([buildStarPolygon()], {
+                    const result = geometryExtrude.extrudePolygon([buildStarPolygon()], {
                         depth: 2,
                         bevelSize: config.bevelSize,
                         bevelSegments: config.bevelSegments
