Optimize polyline extrude

--- a/test/polyline-offset.html
+++ b/test/polyline-offset.html
@@ -36,14 +36,14 @@
         drawPolygon(polygon, '#f00');
 
         drawPolygon(
-            geometryExtrude.offsetPolygonWithHole(polygon, null, 10), '#0f0'
+            geometryExtrude.offsetPolygon(polygon, null, 10), '#0f0'
         );
         drawPolygon(
-            geometryExtrude.offsetPolygonWithHole(polygon, null, -5), '#00f'
+            geometryExtrude.offsetPolygon(polygon, null, -5), '#00f'
         );
 
         drawPolygon(
-            geometryExtrude.offsetPolygonWithHole(polygon, null, 20, 1), '#000'
+            geometryExtrude.offsetPolygon(polygon, null, 20, 1), '#000'
         );
     </script>
 </body>
