--- a/test/distortion.html
+++ b/test/distortion.html
@@ -56,13 +56,13 @@
             // Map to six faces.
             // pz --- px --- nz
             // py --- nx --- ny
-            if (v < 0.5) {
-                if (u < 1 / 3) { // pz
+            if (v <= 0.5) {
+                if (u <= 1 / 3) { // pz
                     vec[0] = (u * 3) * 2 - 1;
                     vec[1] = (v * 2) * 2 - 1;
                     vec[2] = 1;
                 }
-                else if (u >= 1 / 3 && u < 2 / 3) { // px
+                else if (u > 1 / 3 && u <= 2 / 3) { // px
                     vec[0] = 1;
                     vec[1] = (v * 2) * 2 - 1;
                     vec[2] = 1 - (u - 1 / 3) * 3 * 2;
@@ -74,12 +74,12 @@
                 }
             }
             else {
-                if (u < 1 / 3) {    // py
+                if (u <= 1 / 3) {    // py
                     vec[0] = 1 - u * 3 * 2;
                     vec[1] = 1;
                     vec[2] = (v - 0.5) * 2 * 2 - 1;
                 }
-                else if (u >= 1 / 3 && u < 2 / 3) { // nx
+                else if (u > 1 / 3 && u <= 2 / 3) { // nx
                     vec[0] = -1;
                     vec[1] = 1 - (u - 1 / 3) * 3 * 2;
                     vec[2] = (v - 0.5) * 2 * 2 - 1;
